--- a/css/certificate_style.css
+++ b/css/certificate_style.css
@@ -199,6 +199,9 @@
     margin-bottom: 12px;
   }
 }
+
+
+
 @media only screen and (min-width: 1300px) {
   #certificate {
     width: 85%;
@@ -209,12 +212,12 @@
   .certifate1_container .certificate_logo img {
     width: 150px;
   }
-  .certifate1_container .certificate_title {
+  /* .certifate1_container .certificate_title {
     margin-top: -6.5%;
-  }
-  .certifate1_container .certificate_text {
+  } */
+  /* .certifate1_container .certificate_text {
     margin-left: 4.9%;
-  }
+  } */
   .certifate1_container .certificate_text h1 {
     font-size: 6rem;
   }
@@ -230,15 +233,22 @@
   }
 }
 
-@media(min-width: 3060px){
+
+@media only screen
+and (min-width: 2560px)
+and (max-width: 4000px){
   .certifate1_container .certificate_logo{
-    margin-left: 35%;
+    margin-left: 35% ;
   }
   .certifate1_container .certificate_text{
-    margin-left: 20.9%;
-    margin-top: 20px;
+    margin-left: 20.9% ;
+    margin-top: 20px ;
+  }
+  .certifate1_container .certificate_title{
+    margin-top: -110px;
   }
 }
+
 
 @media (max-width: 800px) {
   .certifate1_container .certificate_logo {
